--- a/_includes/important-links.html
+++ b/_includes/important-links.html
@@ -5,7 +5,7 @@
   <br />
   Meet core team and other Elixir developers at <a class="spec" href="https://elixirconf.com/" target="_blank">ElixirConf,<sup>®</sup></a> Aurora CO, Aug 27-30!
   <a class="spec" href="https://elixirconf.com/#register" target="_blank">Standard Tickets are available until Aug 11, 2019!.</a>
-  <a class="spec" href="https://book.passkey.com/e/49848525" target="_blank">Discount rooms at the 5 Star Gaylord Rockies Resort have been extended until Aug 4!</a>
+  <a class="spec" href="https://book.passkey.com/e/49848525" target="_blank">Discount rooms at the venue hotel (Gaylord Rockies Resort) have been extended until Aug 4!</a>
 </div>
 
 {% include mini-docu.html %}
