--- a/_includes/important-links.html
+++ b/_includes/important-links.html
@@ -3,8 +3,9 @@
     <img src="https://elixirconf.com/2018/images/resources/elixirconf-logo-brand-dk.png" width="190" title="ElixirConf logo" style="border:0; margin-left:-4px">
   </a>
   <br />
-  <a class="spec" href="https://elixirconf.com/" target="_blank">ElixirConf<sup>®</sup></a> is at the Gaylord Rockies Resort, Aurora CO, August 27-30 this year!
-  <a class="spec" href="https://elixirconf.com/#register" target="_blank">Advance Tickets are available until July 14, 2019!.</a>
+  Meet core team and other Elixir developers at <a class="spec" href="https://elixirconf.com/" target="_blank">ElixirConf,<sup>®</sup></a> Aurora CO, Aug 27-30!
+  <a class="spec" href="https://elixirconf.com/#register" target="_blank">Standard Tickets are available until Aug 11, 2019!.</a>
+  <a class="spec" href="https://book.passkey.com/e/49848525" target="_blank">Discount rooms at the venue hotel (Gaylord Rockies Resort) have been extended until Aug 4!</a>
 </div>
 
 {% include mini-docu.html %}
