--- a/_includes/important-links.html
+++ b/_includes/important-links.html
@@ -3,8 +3,8 @@
     <img src="https://elixirconf.com/2018/images/resources/elixirconf-logo-brand-dk.png" width="190" title="ElixirConf logo" style="border:0; margin-left:-4px">
   </a>
   <br />
-  Meet core team and other Elixir developers at <a class="spec" href="https://elixirconf.com/" target="_blank">ElixirConf,<sup>®</sup></a> Aurora CO, Aug 27-30!
-  <a class="spec" href="https://elixirconf.com/#register" target="_blank">Standard Tickets are available until Aug 11, 2019!.</a>
+  Meet core team and other Elixir developers at <a class="spec" href="https://elixirconf.com/" target="_blank">ElixirConf,<sup>®</sup></a> in Aurora CO, Aug 27-30!
+  <a class="spec" href="https://elixirconf.com/#register" target="_blank">Extended Tickets now available!.</a>
 </div>
 
 {% include mini-docu.html %}
