Move Code Editor Support to the wiki

--- a/_includes/important-links.html
+++ b/_includes/important-links.html
@@ -1,12 +1,3 @@
-<div class="widget">
-  <a class="spec" href="https://elixirconf.com/" target="_blank">
-    <img src="https://elixirconf.com/2018/images/resources/elixirconf-logo-brand-dk.png" width="190" title="ElixirConf logo" style="border:0; margin-left:-4px">
-  </a>
-  <br />
-  Meet core team and other Elixir developers at <a class="spec" href="https://elixirconf.com/" target="_blank">ElixirConf,<sup>®</sup></a> in Aurora CO, Aug 27-30!
-  <a class="spec" href="https://elixirconf.com/#register" target="_blank">Extended Tickets now available!.</a>
-</div>
-
 {% include mini-docu.html %}
 
 <div class="widget">
@@ -35,24 +26,7 @@
   <ul>
     <li><a class="spec" href="https://github.com/elixir-lang/elixir">Source Code & Contributing</a></li>
     <li><a class="spec" href="https://github.com/elixir-lang/elixir/issues">Issues tracker</a></li>
+    <li><a class="spec" href="https://github.com/elixir-lang/elixir/wiki/Code-Editor-Support">Code Editor Support</a></li>
     <li><a class="spec" href="/crash-course.html">Crash course for Erlang developers</a></li>
   </ul>
 </div>
-
-<div class="widget">
-  <h3 class="widget-title">Code editor support</h3>
-  <ul>
-    <li><a class="spec" href="https://github.com/elixir-lang/emacs-elixir">Emacs Mode</a></li>
-    <li><a class="spec" href="http://www.alchemist-elixir.org/">Alchemist (Emacs Elixir Tooling)</a></li>
-    <li><a class="spec" href="https://github.com/elixir-lang/elixir-tmbundle">TextMate / Sublime Text Bundle</a></li>
-    <li><a class="spec" href="https://github.com/vishnevskiy/ElixirSublime">Sublime Plugin</a></li>
-    <li><a class="spec" href="https://github.com/elixir-lang/vim-elixir">Vim Elixir</a></li>
-    <li><a class="spec" href="https://github.com/slashmili/alchemist.vim">Alchemist.vim (Vim Elixir Tooling)</a></li>
-    <li><a class="spec" href="https://github.com/SteffenBauer/elixir-gtksourceview">GtkSourceView (gedit)</a></li>
-    <li><a class="spec" href="https://github.com/lucasmazza/language-elixir">Atom Package</a></li>
-    <li><a class="spec" href="https://github.com/KronicDeth/intellij-elixir">IntelliJ Elixir</a></li>
-    <li><a class="spec" href="https://marketplace.visualstudio.com/items?itemName=mjmcloug.vscode-elixir">Visual Studio Code Elixir</a></li>
-  </ul>
-</div>
-
-{% include plataformatec.html %}
