Add back Plataformatec links

--- a/_includes/important-links.html
+++ b/_includes/important-links.html
@@ -30,3 +30,5 @@
     <li><a class="spec" href="/crash-course.html">Crash course for Erlang developers</a></li>
   </ul>
 </div>
+
+{% include plataformatec.html %}
