Add upcoming conferences section and add CodeBeam SF & ElixirConf EU
Added in important links; over the community section.

I have made it such that it is easy to add and remove conferences from
a list; I thought it would be best to order the conferences such that
the most recent is at the top, and the template include room for a
logo, the location, and a little space to write some information about
dates.

--- a/_includes/important-links.html
+++ b/_includes/important-links.html
@@ -8,6 +8,8 @@
 
 {% include mini-docu.html %}
 
+{% include conferences.html %}
+
 <div class="widget">
   <h3 class="widget-title">Join the Community</h3>
   <ul>
