--- a/css/style.css
+++ b/css/style.css
@@ -562,6 +562,20 @@ body.learning         div.menu li.learning        a {
   color: #333;
 }
 
+.widget.events {
+  margin: 0;
+}
+
+.widget.events a {
+  display: inline-block;
+  padding-bottom: 21px;
+  text-decoration: none;
+}
+
+.widget.events a:hover {
+  color: #4e2a8e;
+}
+
 /* Posts
 -------------------------------------------------------------- */
 .hentry {
