--- a/css/style.css
+++ b/css/style.css
@@ -562,7 +562,7 @@ body.learning         div.menu li.learning        a {
   color: #333;
 }
 
-.widget.events {
+.sidebar .widget.events {
   margin: 0;
 }
 
