--- a/css/style.css
+++ b/css/style.css
@@ -563,7 +563,7 @@ body.learning         div.menu li.learning        a {
 }
 
 .sidebar .widget.events {
-  margin: 0;
+  margin-bottom: 5px;
 }
 
 .widget.events a {
@@ -574,6 +574,11 @@ body.learning         div.menu li.learning        a {
 
 .widget.events a:hover {
   color: #4e2a8e;
+}
+
+.widget.events a img {
+  height: auto;
+  max-width: 240px;
 }
 
 /* Posts
