--- a/_includes/conferences.html
+++ b/_includes/conferences.html
@@ -1,13 +1,10 @@
 <div class="widget events">
   <h3 class="widget-title">Upcoming conferences</h3>
 
-  <a href="http://bit.ly/2OH94JA">
-    <img src="https://i.imgur.com/97boNMf.png" alt="CodeBeam SF" style="max-width:240px; height:auto;" /><br />
-    <span><strong>San Francisco, California</strong> | Conference 5–6 March | Training 2–4 March</span>
-  </a>
+ 
 
   <a href="https://www2.elixirconf.eu/l/23452/2019-11-25/6t44sx">
     <img src="https://esl-conf-staging.s3.eu-central-1.amazonaws.com/esl-conf-stg/media/files/000/000/935/original/elixirconfeu2020-elixirlang.jpg" alt="ElixirConf EU 2020" style="max-width:240px; height:auto;" /><br />
-    <span><strong>Warsaw, Poland</strong> | Conference 29–30 April | Training 28 April</span>
+    <span><strong>Warsaw, Poland</strong> | Conference 7-8 October | Training 6 October</span>
   </a>
 </div>
