add {max-width: 100%} css rule to all img tags to improve mobile UX

--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,7 @@ img {
   border: 0;
   -ms-interpolation-mode: bicubic;
   vertical-align: middle;
+  max-width: 100%;
 }
 svg:not(:root) { overflow: hidden; }
 form { margin: 0; }
