--- a/_includes/search.html
+++ b/_includes/search.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="widget search">
-  <form method="post" id="search-form" class="search-form" action="https://searx.be/" onsubmit="document.getElementById('searchq').value = document.getElementById('searchfield').value + ' site:elixir-lang.org | site:hexdocs.pm/elixir | site:hexdocs.pm/mix | site:hexdocs.pm/eex | site:hexdocs.pm/logger | site:hexdocs.pm/iex | site:hexdocs.pm/ex_unit'; return true;">
+  <form method="post" id="search-form" class="search-form" action="https://searx.be/search" onsubmit="document.getElementById('searchq').value = document.getElementById('searchfield').value + ' site:elixir-lang.org | site:hexdocs.pm/elixir | site:hexdocs.pm/mix | site:hexdocs.pm/eex | site:hexdocs.pm/logger | site:hexdocs.pm/iex | site:hexdocs.pm/ex_unit'; return true;">
 		<input type="hidden" id="searchq" name="q" value="">
     		<input class="search-text" type="text" placeholder="Search..." id="searchfield" aria-label="Search box">
 		<input class="search-submit button" name="submit" type="submit" value="Search" aria-label="Search button">
