Add survey banner

--- a/_includes/bottom.html
+++ b/_includes/bottom.html
@@ -25,6 +25,9 @@
       });
       $('.jekyll-toc-header a.jekyll-toc-link-here span.jekyll-toc-icon').addClass('icon icon-link');
       $('.jekyll-toc-header a.jekyll-toc-back-to-top span.jekyll-toc-icon').addClass('icon icon-chevron-up');
+      $('#top-banner .close').click(function() {
+        $(this).parent().slideUp(200);
+      })
     });
   </script>
 </body>
