--- a/_includes/top.html
+++ b/_includes/top.html
@@ -19,6 +19,10 @@
 </head>
 
 <body class="{{ page.section }}">
+  <div id="top-banner">
+    There is a survey. Some info about the survey. You can <a href="/" target="_blank">click here to take the survey</a>.
+    <div class="close">&times;</div>
+  </div>
   <div id="container">
     <div class="wrap">
     <div id="header">
