--- a/css/style.css
+++ b/css/style.css
@@ -1045,3 +1045,28 @@ a.cta-button:active {
   background-image: none;
   box-shadow: inset 0 2px 4px rgba(0, 0, 0, .15);
 }
+
+/* Top banner */
+#top-banner {
+  background: #fff8ed;
+  border-bottom: 1px solid #e4d9c9;
+  line-height: 1;
+  text-align: center;
+  padding: 21px 30px 16px 30px;
+  margin-bottom: 5px;
+  position: relative;
+}
+
+#top-banner .close {
+  cursor: pointer;
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 13px 18px;
+  font-size: 22px;
+  opacity: 0.35;
+}
+
+#top-banner .close:hover {
+  opacity: 0.7;
+}
