--- a/_includes/bottom.html
+++ b/_includes/bottom.html
@@ -27,6 +27,7 @@
       $('.jekyll-toc-header a.jekyll-toc-back-to-top span.jekyll-toc-icon').addClass('icon icon-chevron-up');
       $('#top-banner .close').click(function() {
         $(this).parent().slideUp(200);
+        document.cookie = 'topBannerDisabled=true';
       })
     });
   </script>
