--- a/_includes/top.html
+++ b/_includes/top.html
@@ -20,7 +20,7 @@
 
 <body class="{{ page.section }}">
   <div id="top-banner">
-    There is a survey. Some info about the survey. You can <a href="/" target="_blank">click here to take the survey</a>.
+    Please participate in the <a href="https://elixirsurvey.typeform.com/to/yYmJv1" target="_blank">2020 Elixir Ecosystem Survey</a>!
     <div class="close">&times;</div>
   </div>
   <script type="text/javascript">
