Remove outdated links and reosurces

--- a/_includes/important-links.html
+++ b/_includes/important-links.html
@@ -3,16 +3,24 @@
 <div class="widget">
   <h3 class="widget-title">Official Channels</h3>
   <ul>
+    <li><a class="spec" href="https://github.com/elixir-lang/elixir">Source code & Issues tracker</a></li>
     <li><a class="spec" href="irc://irc.freenode.net/elixir-lang">#elixir-lang on freenode IRC</a></li>
     <li><a class="spec" href="https://twitter.com/elixirlang">@elixirlang on Twitter</a></li>
   </ul>
 </div>
 
-{% include mini-docu.html %}
+<div id="mini-docu" class="widget">
+  <a href="http://doc.honeypot.io/elixir-documentary-2018/?utm_source=elixir_home&utm_medium=referral">
+    <div class="mini-docu-cta">
+      <div class="mini-docu-copy">Watch the Elixir<br />mini-documentary!</div>
+    </div>
+  </a>
+</div>
 
 <div class="widget">
   <h3 class="widget-title">Join the Community</h3>
   <ul>
+    <li><a class="spec" href="https://hex.pm">Hex.pm package manager</a></li>
     <li><a class="spec" href="http://elixirforum.com">Elixir Forum</a></li>
     <li><a class="spec" href="https://elixir-slackin.herokuapp.com/">Elixir on Slack</a></li>
     <li><a class="spec" href="https://discord.gg/elixir">Elixir on Discord</a></li>
@@ -21,16 +29,6 @@
   </ul>
 </div>
 
-{% include eef.html %}
-
-<div class="widget">
-  <h3 class="widget-title">Important links</h3>
-  <ul>
-    <li><a class="spec" href="https://github.com/elixir-lang/elixir">Source Code & Contributing</a></li>
-    <li><a class="spec" href="https://github.com/elixir-lang/elixir/issues">Issues tracker</a></li>
-    <li><a class="spec" href="https://github.com/elixir-lang/elixir/wiki/Code-Editor-Support">Code Editor Support</a></li>
-    <li><a class="spec" href="/crash-course.html">Crash course for Erlang developers</a></li>
-  </ul>
+<div id="eef" class="widget">
+  <a href="https://erlef.org/" title="Join the Erlang Ecosystem Foundation"><img src="/images/logo/eef.png" alt="Join the Erlang Ecosystem Foundation" width="174" style="margin-top:-10px" /></a>
 </div>
-
-{% include plataformatec.html %}
