--- a/_includes/bottom.html
+++ b/_includes/bottom.html
@@ -3,7 +3,7 @@
       <div class="clear"></div>
 
       <div id="copyright">
-        &copy; 2012–{{ 'now' | date: "%Y" }} <a href="http://plataformatec.com.br/">Plataformatec</a>. All rights reserved.
+        &copy; 2012–{{ 'now' | date: "%Y" }} The Elixir Team. All rights reserved.
       </div>
     </div><!-- .wrap -->
   </div><!-- #container -->
