--- a/_includes/conferences.html
+++ b/_includes/conferences.html
@@ -4,11 +4,8 @@
   <a href="https://virtual.elixirconf.eu/">
     <img src="https://i.imgur.com/AvxW0BR.jpg" alt="ElixirConf EU Virtual" />
     <br />
-    <span><strong>Online</strong> | Conference 18-19 June | Training 15-17 June</span>
+    <span><strong>Online</strong> | Conference 7-8 October | Training 6 October</span>
   </a> 
 
-  <a href="https://www2.elixirconf.eu/l/23452/2019-11-25/6t44sx">
-    <img src="https://esl-conf-staging.s3.eu-central-1.amazonaws.com/esl-conf-stg/media/files/000/000/935/original/elixirconfeu2020-elixirlang.jpg" alt="ElixirConf EU 2020" style="max-width:240px; height:auto;" /><br />
-    <span><strong>Warsaw, Poland</strong> | Conference 7-8 October | Training 6 October</span>
-  </a>
+  
 </div>
