Add companies using elixir section
Co-authored-by: Ricardo Echavarria <rgechavarria@gmail.com>
Co-authored-by: Laura Bernal <laurabernal2552@gmail.com>

--- a/css/style.css
+++ b/css/style.css
@@ -642,6 +642,14 @@ body.learning         div.menu li.learning        a {
 .entry-title a, .entry-title a:visited { color: #222; }
 .entry-title a:hover { color: #4e2a5e; }
 
+/* Post Cases
+-------------------------------------------------------------- */
+.cases {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+
 /* Post bylines/datelines
 -------------------------------------------------------------- */
 .byline {
