Add logos, and tags to cases. Show boxes on index page
Co-authored-by: Ricardo Echavarria <rgechavarria@gmail.com>
Co-authored-by: Laura Bernal <laurabernal2552@gmail.com>

--- a/css/style.css
+++ b/css/style.css
@@ -644,7 +644,7 @@ body.learning         div.menu li.learning        a {
 
 /* Post Cases
 -------------------------------------------------------------- */
-.cases {
+.cases-header {
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
