Add companies using Elixir in production section in home page (#1457)

--- a/css/style.css
+++ b/css/style.css
@@ -642,6 +642,74 @@ body.learning         div.menu li.learning        a {
 .entry-title a, .entry-title a:visited { color: #222; }
 .entry-title a:hover { color: #4e2a5e; }
 
+/* Post Cases titles
+-------------------------------------------------------------- */
+.cases-header {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+/* Post Cases boxes
+-------------------------------------------------------------- */
+.clases-boxes {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 1em;
+}
+
+.clases-boxes a {
+  text-decoration: none;
+}
+
+@media screen and (max-width: 480px) { 
+  .clases-boxes {
+    justify-content: center;
+    width: 100%;
+   }
+}
+
+.cases-image {
+    display: flex;
+    justify-content: center;
+    width: 175px;
+    height: 125px;
+    padding: 10px;
+    outline-style: solid;
+    outline-width: 1.5px;
+    outline-color: #E5E5E5;
+    margin: auto;
+}
+
+.cases-image:hover {
+  outline-width: 2px;
+  outline-color: #4E2A8E;
+  background-color:#F6F4F9;
+}
+
+.cases-tag {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  padding: 10px 5px 10px 0px;
+  margin:  0;
+}
+
+.cases-tag span:hover {
+  background-color: #4E2A8E;
+}
+
+.cases-tag span {
+  font-size: 12px;
+  text-decoration: none;
+  color: #ffffff;
+  padding: 2px 3px 2px 3px;
+  background-color: #9EB0C3;
+  border-radius: 3px;
+  margin: 5px 5px 0px 5px;
+}
+
 /* Post bylines/datelines
 -------------------------------------------------------------- */
 .byline {
