--- a/_includes/top.html
+++ b/_includes/top.html
@@ -18,7 +18,7 @@
   <link rel="search" type="application/opensearchdescription+xml" title="elixir-lang.org" href="/opensearch.xml" />
   <script async defer data-domain="elixir-lang.org" src="https://stats.elixir-lang.org/js/index.js"></script>
   <script defer src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script defer src="/js/toc/toc.js" type="text/javascript" charset="utf-8"></script>
+  <script defer src="/js/index.js" type="text/javascript" charset="utf-8"></script>
   {% seo title=false %}
 </head>
 
