--- a/_layouts/getting-started.html
+++ b/_layouts/getting-started.html
@@ -1,7 +1,3 @@
----
-section: getting-started
----
-
 {% include top.html %}
 
 <div id="sidebar-primary" class="sidebar">
@@ -22,6 +18,13 @@ section: getting-started
 
 <div id="content">
   <article>
+    <div class="getting-started-title">
+      <small>{{ page.category | default: "Getting Started" }}</small>
+      <h1>{{ page.title }}</h1>
+    </div>
+
+    {% include toc.html %}
+
     {{ content }}
   </article><!-- .hfeed -->
 
