--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,13 @@ layout: blog
         {% if page.subtitle %}
         <h2>{{ page.subtitle }}</h2>
         {% endif %}
-        <div class="byline">{{ page.date | date: "%B %d, %Y" }}{% if page.author %} &middot; by {{ page.author}}{% endif %} &middot; in {% for category in page.categories %}<a href="/blog/categories.html#{{category}}" class="category">{{ category }}</a>{% endfor %}</div>
+        <div class="byline">{{ page.date | date: "%B %d, %Y" }}{% if page.author %} &middot; by {{ page.author}}{% endif %} &middot; in {% for category in page.categories %}
+          {% if category == "Elixir in Production" %}
+            <a class="category" href="/cases.html">{{ category }}</a>
+          {% else %}
+            <a class="category" href="/blog/categories.html#{{ category }}">{{ category }}</a>
+          {% endif %}    
+        {% endfor %}</div>
       </div>
 
       <div class="entry-content">
