Use background urls to load logos
Otherwise we would load all logos on the home page.
By using background urls, we will load at best 6.

--- a/css/style.css
+++ b/css/style.css
@@ -610,7 +610,7 @@ body.learning         div.menu li.learning        a {
   justify-content: space-between;
 }
 
-@media screen and (max-width: 959px) { 
+@media screen and (max-width: 959px) {
   .cases-boxes {
     justify-content: space-around;
   }
@@ -639,7 +639,8 @@ body.learning         div.menu li.learning        a {
   outline-width: 1.5px;
   outline-color: #E5E5E5;
   margin: auto;
-
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .cases-tag {
@@ -663,10 +664,6 @@ body.learning         div.menu li.learning        a {
 .cases-box:hover .cases-image {
   outline-width: 2px;
   outline-color: #4E2A8E;
-}
-
-.cases-box:hover img {
-  opacity: 1.0;
 }
 
 .cases-box:hover .cases-tag span {
