cases section - high res logos

--- a/css/style.css
+++ b/css/style.css
@@ -671,21 +671,27 @@ body.learning         div.menu li.learning        a {
 }
 
 .cases-image {
-    display: flex;
-    justify-content: center;
-    width: 175px;
-    height: 125px;
-    padding: 10px;
-    outline-style: solid;
-    outline-width: 1.5px;
-    outline-color: #E5E5E5;
-    margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  width: 175px;
+  height: 125px;
+  padding: 10px;
+  outline-style: solid;
+  outline-width: 1.5px;
+  outline-color: #E5E5E5;
+  margin: auto;
+}
+
+.cases-image img {
+  width: 90%;
+  height: auto;
 }
 
 .cases-image:hover {
   outline-width: 2px;
   outline-color: #4E2A8E;
-  background-color:#F6F4F9;
 }
 
 .cases-tag {
