--- a/css/style.css
+++ b/css/style.css
@@ -602,6 +602,7 @@ body.learning         div.menu li.learning        a {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin-top: 1em;
 }
 
 .cases-boxes {
@@ -631,7 +632,9 @@ body.learning         div.menu li.learning        a {
 
 .cases-image {
   display: flex;
+  align-items: center;
   justify-content: center;
+  overflow: hidden;
   width: 175px;
   height: 125px;
   padding: 10px;
@@ -641,6 +644,13 @@ body.learning         div.menu li.learning        a {
   margin: auto;
   background-repeat: no-repeat;
   background-position: center;
+  background-size: contain;
+}
+
+
+.cases-image:hover {
+  outline-width: 2px;
+  outline-color: #4E2A8E;
 }
 
 .cases-tag {
@@ -649,6 +659,10 @@ body.learning         div.menu li.learning        a {
   justify-content: center;
   padding: 10px 5px 10px 0px;
   margin:  0;
+}
+
+.cases-tag span:hover {
+  background-color: #4E2A8E;
 }
 
 .cases-tag span {
