Revert CSS changes, reduce backround size

--- a/css/style.css
+++ b/css/style.css
@@ -602,7 +602,6 @@ body.learning         div.menu li.learning        a {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-top: 1em;
 }
 
 .cases-boxes {
@@ -632,9 +631,7 @@ body.learning         div.menu li.learning        a {
 
 .cases-image {
   display: flex;
-  align-items: center;
   justify-content: center;
-  overflow: hidden;
   width: 175px;
   height: 125px;
   padding: 10px;
@@ -644,13 +641,7 @@ body.learning         div.menu li.learning        a {
   margin: auto;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: contain;
-}
-
-
-.cases-image:hover {
-  outline-width: 2px;
-  outline-color: #4E2A8E;
+  background-size: 125px;
 }
 
 .cases-tag {
@@ -659,10 +650,6 @@ body.learning         div.menu li.learning        a {
   justify-content: center;
   padding: 10px 5px 10px 0px;
   margin:  0;
-}
-
-.cases-tag span:hover {
-  background-color: #4E2A8E;
 }
 
 .cases-tag span {
