Add change.org case

--- a/css/style.css
+++ b/css/style.css
@@ -607,18 +607,13 @@ body.learning         div.menu li.learning        a {
 .cases-boxes {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-@media screen and (max-width: 959px) {
-  .cases-boxes {
-    justify-content: space-around;
-  }
+  justify-content: space-around;
 }
 
 .cases-box {
   margin: 1em 0.25em;
   text-decoration: none;
+  width: 205px;
 }
 
 #shuffled-cases .cases-box {
@@ -645,21 +640,20 @@ body.learning         div.menu li.learning        a {
 }
 
 .cases-tag {
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: center;
-  padding: 10px 5px 10px 0px;
+  text-align: center;
+  padding: 10px 0;
   margin:  0;
 }
 
 .cases-tag span {
+  display: inline-block;
   font-size: 13px;
   text-decoration: none;
   color: #ffffff;
   padding: 2px 3px 2px 3px;
-  background-color: #9EB0C3;
+  background-color: #9DA1A6;
   border-radius: 3px;
-  margin: 5px 5px 0px 5px;
+  margin: 5px 3px;
 }
 
 .cases-box:hover .cases-image {
