--- a/_includes/top.html
+++ b/_includes/top.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="description" content="Welcome to Elixir, a dynamic, functional language designed for building scalable and maintainable applications">
   <title>{% if page.title %}{{ page.title }} - {% endif %}The Elixir programming language</title>
-  <link href="http://feeds.feedburner.com/ElixirLang" rel="alternate" title="Elixir's Blog" type="application/atom+xml" />
+  <link href="https://elixir-lang.org/atom.xml" rel="alternate" title="Elixir's Blog" type="application/atom+xml" />
   <link rel="stylesheet" type="text/css" href="/css/style.css" />
   <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
   <link rel="stylesheet" href="/js/icons/style.css">
