--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -7,7 +7,7 @@
 <div id="sidebar-primary" class="sidebar">
   {% include search.html %}
   <div class="rss-button">
-    <a href="http://feeds.feedburner.com/ElixirLang" target="_blank"><img src="/images/social/RSSButton.png" alt="RSS button" /></a>
+    <a href="https://elixir-lang.org/atom.xml" target="_blank"><img src="/images/social/RSSButton.png" alt="RSS button" /></a>
   </div>
   {% include categories-list.html %}
   {% include important-links.html %}
