--- a/css/style.css
+++ b/css/style.css
@@ -289,7 +289,7 @@ table {
 table caption {
   font-size: 0.8125em;
   line-height: 1.692307em;
-  color: #888;
+  color: #666;
 }
 table th {
   font-size: 0.8461538461538462em;
@@ -303,7 +303,7 @@ table th {
 }
 td {
   padding: 0.8125em 2%;
-  color: #888;
+  color: #666;
   border-bottom: 1px solid #e7e7e7;
 }
 
@@ -339,7 +339,7 @@ dl dt {
 dl dd {
   margin: 0 0 5px 20px;
   padding: 0;
-  color: #888;
+  color: #666;
 }
 
 /* Blockquotes
@@ -350,7 +350,7 @@ blockquote {
   font-size: 1.153846153846154em;    /* 15 / 13 = 1.153846153846154 */
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-style: italic;
-  color: #888;
+  color: #666;
   margin: 0 0 20px 0;
   padding: 5px 0 5px 20px;
 }
@@ -391,7 +391,7 @@ input[type="text"], input[type="password"], input[type="email"], .input-text, te
   border: 1px solid #ddd;
   padding: 5px;
   font-size: 0.8125em;
-  color: #888;
+  color: #666;
   margin: 0;
   display: block;
   background: #fff;
@@ -508,13 +508,8 @@ body.learning         div.menu li.learning        a {
 }
 
 .sidebar .widget.news {
-  color: #333;
   font-size: 0.8em;
   margin-bottom: 7px;
-}
-
-.widget.news h3 a {
-  color: #333;
 }
 
 .sidebar .widget.events {
@@ -584,7 +579,6 @@ body.learning         div.menu li.learning        a {
   text-transform: uppercase;
   line-height: 1.3em;
   border: none;
-  color: #333;
   word-spacing: 2px;
 }
 .singular .entry-title {
@@ -701,41 +695,40 @@ body.learning         div.menu li.learning        a {
   font-size: 0.8461538461538462em;
   color: #aaa;
 }
-.entry-meta a { color: #888; }
+.entry-meta a { color: #666; }
 .entry-meta a:hover { color: #000; }
 
 /* Singular post prev/next links
 -------------------------------------------------------------- */
 .singular .loop-nav {
   font-size: 0.8461538461538462em;
-  color: #888;
+  color: #666;
   clear: left;
 }
 
 /* Archive/search pagination and comment pagination
 -------------------------------------------------------------- */
-.comment-navigation { margin-bottom: 1.692307em; }
 .pagination.loop-pagination {
   text-align: center;
   clear: both;
   margin: 7px 0;
 }
-.pagination .page-numbers, .comment-navigation .page-numbers {
+.pagination .page-numbers {
   display: inline-block;
   padding: 4px 8px;
   margin: 0;
   line-height: 1em;
   color: #444;
 }
-.pagination a.page-numbers, .comment-navigation a.page-numbers {
+.pagination a.page-numbers {
   color: #333;
   background: #e9e9e9;
 }
-.pagination a:hover, .comment-navigation a:hover {
+.pagination a:hover {
   color: #fff;
   background: #333;
 }
-.pagination .current, .comment-navigation .current { color: #aaa; }
+.pagination .current { color: #aaa; }
 
 /* Widgets
 -------------------------------------------------------------- */
@@ -1008,6 +1001,6 @@ ol.jekyll-toc li a {
 
 .getting-started-title small {
   font-size: 1em;
-  color: #999;
+  color: #666;
   display: block;
 }
