Avoid pure black
On AMOLED phones can cause "pixel smearing" when
pure black is used (black pixels turn off, scroll
happens, and there's a delay before pixels turn
back on).

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ html {
 body {
   margin: 0;
   font: 0.9em/1.692307em 'Bitter', Georgia, 'Times New Roman', Times, serif;
-  color: #000;
+  color: #24292e;
   padding: 0;
   height: 100%;
 }
@@ -50,7 +50,7 @@ a.spec, a.spec:visited {
 }
 a:hover {
   text-decoration: none;
-  color: #000;
+  color: #24292e;
 }
 abbr { cursor: help }
 abbr[title] { border-bottom: 1px dotted; }
@@ -62,7 +62,7 @@ acronym {
   cursor: help;
 }
 acronym:hover {
-  color: #000;
+  color: #24292e;
   background: #f5f5f5;
   border-bottom: 1px dotted #aaa;
 }
@@ -105,13 +105,13 @@ hr {
 ins {
   font-family: Georgia, 'Times New Roman', Times, serif;
   background: #f5f5f5;
-  color: #000;
+  color: #24292e;
   text-decoration: none;
   font-style: italic;
 }
 mark {
   background: #f5f5f5;
-  color: #000;
+  color: #24292e;
   font-style: italic;
   font-weight: bold;
 }
@@ -170,7 +170,7 @@ h1, h2, h3, h4, h5, h6 {
   font-style: normal;
   font-weight: normal;
   margin: 0 0 15px 0;
-  color: #000;
+  color: #24292e;
   line-height: 1.3em;
 }
 h1 { font-size: 2.769230769230769em; }    /* 36 / 13 = 2.769230769230769 */
@@ -312,7 +312,7 @@ td {
   width: auto;
   width: 85%;
 }
-#content table caption { color: #000; }
+#content table caption { color: #24292e; }
 #content table th {
   font-weight: bold;
   padding: 10px 4%;
@@ -363,7 +363,7 @@ blockquote p:last-child, blockquote pre:last-child {
 -------------------------------------------------------------- */
 code {
   padding: 1px 3px;
-  color: #000;
+  color: #24292e;
   background: #fff8ed;
   border:1px solid #faefe0;
 }
@@ -672,7 +672,7 @@ body.learning         div.menu li.learning        a {
 }
 .singular .byline { margin-bottom: 1.7em; }
 .byline a, .byline a:visited { color: #aaa; }
-.byline a:hover { color: #000; }
+.byline a:hover { color: #24292e; }
 .author, .published, .category, .edit {
   font-family: 'Bitter', Georgia, 'Times New Roman', Times, serif;
   font-style: normal;
@@ -696,7 +696,7 @@ body.learning         div.menu li.learning        a {
   color: #aaa;
 }
 .entry-meta a { color: #666; }
-.entry-meta a:hover { color: #000; }
+.entry-meta a:hover { color: #24292e; }
 
 /* Singular post prev/next links
 -------------------------------------------------------------- */
@@ -721,7 +721,7 @@ body.learning         div.menu li.learning        a {
   color: #444;
 }
 .pagination a.page-numbers {
-  color: #000;
+  color: #24292e;
   background: #e9e9e9;
 }
 .pagination a:hover {
@@ -745,7 +745,7 @@ body.learning         div.menu li.learning        a {
 -------------------------------------------------------------- */
 .sidebar .widget-title {
   font-size: 0.7692307692307692em;  /* 10 / 13 = 0.7692307692307692 */
-  color: #000;
+  color: #24292e;
   text-transform: uppercase;
   letter-spacing: 1px;
   word-spacing: 2px;
@@ -897,7 +897,7 @@ ol.jekyll-toc li a {
 }
 .jekyll-toc-header a.jekyll-toc-anchor,
 .jekyll-toc-header a.jekyll-toc-anchor:hover {
-  color: #000
+  color: #24292e
 }
 .jekyll-toc-header:hover a.jekyll-toc-anchor {
   cursor: pointer;
@@ -915,7 +915,7 @@ ol.jekyll-toc li a {
 .jekyll-toc-header span.jekyll-toc-icon {
   display:none;
   vertical-align: middle;
-  color: #000;
+  color: #24292e;
 }
 .jekyll-toc-header:hover span.jekyll-toc-icon {
   display:inline-block;
