Removing font weight property for better readability.

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ html {
 }
 body {
   margin: 0;
-  font: 0.95em/1.692307em 'Bitter', Georgia, 'Times New Roman', Times, serif;
+  font: 'Bitter', Georgia, 'Times New Roman', Times, serif;
   color: #24292e;
   padding: 0;
   height: 100%;
