Reorganize learning, add free tag

--- a/css/style.css
+++ b/css/style.css
@@ -631,7 +631,7 @@ body.learning         div.menu li.learning        a {
   font-size: 13px;
   text-decoration: none;
   color: #ffffff;
-  padding: 2px 3px 2px 3px;
+  padding: 2px 3px;
   background-color: #9DA1A6;
   border-radius: 3px;
   margin: 5px 3px;
@@ -823,6 +823,18 @@ body.learning a.cover {
 
 body.learning h4.resource {
   padding-top: 1em;
+}
+
+body.learning .free {
+  background-color: #4E2A8E;
+  color: #ffffff;
+  display: inline-block;
+  font-size: 14px;
+  text-decoration: none;
+  padding: 0 5px;
+  border-radius: 5px;
+  line-height: 18px;
+  margin-left: 5px;
 }
 
 /*  Jekyll Table of Contents */
