Move to #elixir on irc.libera.chat

--- a/_includes/important-links.html
+++ b/_includes/important-links.html
@@ -4,7 +4,7 @@
   <h3 class="widget-title">Official Channels</h3>
   <ul>
     <li><a class="spec" href="https://github.com/elixir-lang/elixir">Source code & Issues tracker</a></li>
-    <li><a class="spec" href="irc://irc.freenode.net/elixir-lang">#elixir-lang on freenode IRC</a></li>
+    <li><a class="spec" href="irc://irc.libera.chat/elixir">#elixir on irc.libera.chat</a></li>
     <li><a class="spec" href="https://twitter.com/elixirlang">@elixirlang on Twitter</a></li>
   </ul>
 </div>
