Add a trademarks policy

--- a/_includes/bottom.html
+++ b/_includes/bottom.html
@@ -2,8 +2,9 @@
 
       <div class="clear"></div>
 
-      <div id="copyright">
-        &copy; 2012–{{ 'now' | date: "%Y" }} The Elixir Team. All rights reserved.
+      <div id="trademark">
+        &copy; 2012–{{ 'now' | date: "%Y" }} The Elixir Team.<br />
+        Elixir and the Elixir logo are <a href="/trademarks">registered trademarks of The Elixir Team</a>.
       </div>
     </div><!-- .wrap -->
   </div><!-- #container -->
