--- a/css/style.css
+++ b/css/style.css
@@ -762,7 +762,7 @@ body.learning         div.menu li.learning        a {
   text-decoration: underline;
 }
 
-#copyright {
+#trademark {
   text-align: center;
   font-size: 12px;
   padding: 0 0 10px;
