--- a/_includes/important-links.html
+++ b/_includes/important-links.html
@@ -1,5 +1,3 @@
-{% include conferences.html %}
-
 <div class="widget">
   <h3 class="widget-title">Official Channels</h3>
   <ul>
@@ -15,6 +13,11 @@
       <div class="mini-docu-copy">Watch the Elixir<br />mini-documentary!</div>
     </div>
   </a>
+</div>
+
+<div class="widget events">
+  <h3 class="widget-title">Upcoming events</h3>
+  {% include conferences.html %}
 </div>
 
 <div class="widget">
