--- a/css/style.css
+++ b/css/style.css
@@ -523,7 +523,7 @@ body.learning         div.menu li.learning        a {
 }
 
 .widget.events a:hover {
-  color: #4e2a8e;
+  color: #24292e;
 }
 
 .widget.events a img {
