Lighter background for code samples

--- a/css/style.css
+++ b/css/style.css
@@ -364,12 +364,12 @@ blockquote p:last-child, blockquote pre:last-child {
 code {
   padding: 1px 3px;
   color: #24292e;
-  background: #fff8ed;
+  background: #fdfbf7;
   border:1px solid #faefe0;
 }
 pre {
   padding: 15px 20px;
-  background: #fff8ed;
+  background: #fdfbf7;
   border: 1px solid #f6e4cc;
 }
 pre code {
@@ -961,7 +961,7 @@ ol.jekyll-toc li a {
 
 /* Top banner */
 #top-banner {
-  background: #fff8ed;
+  background: #fdfbf7;
   border-bottom: 1px solid #e4d9c9;
   line-height: 1;
   text-align: center;
