--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,8 +1,8 @@
 .highlight  {}
 .highlight .c { color: #998; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
-.highlight .k { font-weight: bold } /* Keyword */
-.highlight .o { font-weight: bold } /* Operator */
+.highlight .k { color: #54585b; font-weight: bold } /* Keyword */
+.highlight .o { color: #54585b; font-weight: bold } /* Operator */
 .highlight .cm { color: #998; font-style: italic } /* Comment.Multiline */
 .highlight .cp { color: #999; font-weight: bold } /* Comment.Preproc */
 .highlight .c1 { color: #998; font-style: italic } /* Comment.Single */
@@ -16,13 +16,13 @@
 .highlight .gi .x { color: #000; background-color: #afa } /* Generic.Inserted.Specific */
 .highlight .go { color: #888 } /* Generic.Output */
 .highlight .gp { color: #555 } /* Generic.Prompt */
-.highlight .gs { font-weight: bold } /* Generic.Strong */
+.highlight .gs { color: #54585b; font-weight: bold } /* Generic.Strong */
 .highlight .gu { color: #aaa } /* Generic.Subheading */
 .highlight .gt { color: #a00 } /* Generic.Traceback */
-.highlight .kc { font-weight: bold } /* Keyword.Constant */
-.highlight .kd { font-weight: bold } /* Keyword.Declaration */
-.highlight .kp { font-weight: bold } /* Keyword.Pseudo */
-.highlight .kr { font-weight: bold } /* Keyword.Reserved */
+.highlight .kc { color: #54585b; font-weight: bold } /* Keyword.Constant */
+.highlight .kd { color: #54585b; font-weight: bold } /* Keyword.Declaration */
+.highlight .kp { color: #54585b; font-weight: bold } /* Keyword.Pseudo */
+.highlight .kr { color: #54585b; font-weight: bold } /* Keyword.Reserved */
 .highlight .kt { color: #458; font-weight: bold } /* Keyword.Type */
 .highlight .m { color: #099 } /* Literal.Number */
 .highlight .s { color: #d14 } /* Literal.String */
@@ -36,7 +36,7 @@
 .highlight .nn { color: #555 } /* Name.Namespace */
 .highlight .nt { color: #000080 } /* Name.Tag */
 .highlight .nv { color: #008080 } /* Name.Variable */
-.highlight .ow { font-weight: bold } /* Operator.Word */
+.highlight .ow { color: #54585b; font-weight: bold } /* Operator.Word */
 .highlight .w { color: #bbb } /* Text.Whitespace */
 .highlight .mf { color: #099 } /* Literal.Number.Float */
 .highlight .mh { color: #099 } /* Literal.Number.Hex */
