Add ElixirConf 2021 to conferences (#1562)

--- a/_includes/conferences.html
+++ b/_includes/conferences.html
@@ -1,5 +1,7 @@
- <a href="https://spawnfest.org/">
-   <img src="https://spawnfest.org/img/nav_title.png" alt="SpawnFest" />
-   <br />
-   <span>Sept 18th-19th, 2021 - Annual online software development contest where teams create the best BEAM-based applications in one weekend.</span>
- </a>
+<a href="https://2021.elixirconf.com/#register">
+  <img src="https://2021.elixirconf.com/images/logos/elixirconf-logo-text.svg" alt="ElixirConf" />
+  <br />
+  <span><b>October 12-15, 2021</b> - The Elixir Community's premier conference for Elixir developers and enthusiasts
+    from
+    around the globe.</span>
+</a>
