--- a/_layouts/getting-started.html
+++ b/_layouts/getting-started.html
@@ -35,7 +35,7 @@
 
   <div id="edit-on-github">
     <span>Is something wrong?</span>
-    <a href="{{ site.github.repository_url }}/edit/master/{{ page.path }}">
+    <a href="{{ site.github.repository_url }}/edit/main/{{ page.path }}">
       Edit this page on GitHub.
     </a>
   </div>
