--- a/_includes/important-links.html
+++ b/_includes/important-links.html
@@ -14,10 +14,10 @@
   </a>
 </div>
 
-<!-- <div class="widget events">
+<div class="widget events">
   <h3 class="widget-title">Upcoming events</h3>
   {% include conferences.html %}
-</div> -->
+</div>
 
 <div class="widget">
   <h3 class="widget-title">Join the Community</h3>
@@ -29,10 +29,12 @@
     <li><a class="spec" href="https://elixir-slackin.herokuapp.com/">Elixir on Slack</a></li>
     <li><a class="spec" href="https://discord.gg/elixir">Elixir on Discord</a></li>
     <li><a class="spec" href="http://elixir.meetup.com">Meetups around the world</a></li>
-    <li><a class="spec" href="https://github.com/elixir-lang/elixir/wiki">Wiki with events and resources maintained by the community</a></li>
+    <li><a class="spec" href="https://github.com/elixir-lang/elixir/wiki">Wiki with events and resources maintained by
+        the community</a></li>
   </ul>
 </div>
 
 <div id="eef" class="widget">
-  <a href="https://erlef.org/" title="Join the Erlang Ecosystem Foundation"><img src="/images/logo/eef.png" alt="Join the Erlang Ecosystem Foundation" width="174" style="margin-top:-10px" /></a>
+  <a href="https://erlef.org/" title="Join the Erlang Ecosystem Foundation"><img src="/images/logo/eef.png"
+      alt="Join the Erlang Ecosystem Foundation" width="174" style="margin-top:-10px" /></a>
 </div>
