--- a/_includes/important-links.html
+++ b/_includes/important-links.html
@@ -29,8 +29,7 @@
     <li><a class="spec" href="https://elixir-slackin.herokuapp.com/">Elixir on Slack</a></li>
     <li><a class="spec" href="https://discord.gg/elixir">Elixir on Discord</a></li>
     <li><a class="spec" href="http://elixir.meetup.com">Meetups around the world</a></li>
-    <li><a class="spec" href="https://github.com/elixir-lang/elixir/wiki">Wiki with events and resources maintained by
-        the community</a></li>
+    <li><a class="spec" href="https://github.com/elixir-lang/elixir/wiki">Wiki with events and resources maintained by the community</a></li>
   </ul>
 </div>
 
