--- a/_includes/important-links.html
+++ b/_includes/important-links.html
@@ -34,6 +34,5 @@
 </div>
 
 <div id="eef" class="widget">
-  <a href="https://erlef.org/" title="Join the Erlang Ecosystem Foundation"><img src="/images/logo/eef.png"
-      alt="Join the Erlang Ecosystem Foundation" width="174" style="margin-top:-10px" /></a>
+  <a href="https://erlef.org/" title="Join the Erlang Ecosystem Foundation"><img src="/images/logo/eef.png" alt="Join the Erlang Ecosystem Foundation" width="174" style="margin-top:-10px" /></a>
 </div>
