--- a/_includes/important-links.html
+++ b/_includes/important-links.html
@@ -14,10 +14,10 @@
   </a>
 </div>
 
-<!-- <div class="widget events">
+<div class="widget events">
   <h3 class="widget-title">Upcoming events</h3>
   {% include conferences.html %}
-</div> -->
+</div>
 
 <div class="widget">
   <h3 class="widget-title">Join the Community</h3>
