--- a/_includes/important-links.html
+++ b/_includes/important-links.html
@@ -1,7 +1,7 @@
 <div class="widget">
   <h3 class="widget-title">Important links</h3>
   <ul>
-    <li class="menu-item development"><a class="spec" href="/development.html">The development cycle</a></li>
+    <li class="menu-item development"><a class="spec" href="/development.html">Development & Team</a></li>
     <li><a class="spec" href="https://github.com/elixir-lang/elixir">Source code & issues tracker</a></li>
   </ul>
 </div>
