--- a/_includes/important-links.html
+++ b/_includes/important-links.html
@@ -14,10 +14,7 @@
   </a>
 </div>
 
-<div class="widget events">
-  <h3 class="widget-title">Upcoming events</h3>
-  {% include conferences.html %}
-</div>
+{% include events.html %}
 
 <div class="widget">
   <h3 class="widget-title">Join the Community</h3>
