Update plausible reference

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" id="font-bitter-css" href="//fonts.googleapis.com/css?family=Bitter:400,700" type="text/css" media="screen" />
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
   <link rel="search" type="application/opensearchdescription+xml" title="elixir-lang.org" href="/opensearch.xml" />
-  <script async defer data-domain="elixir-lang.org" src="https://stats.elixir-lang.org/js/index.js"></script>
+  <script defer data-domain="elixir-lang.org" src="https://plausible.io/js/plausible.js"></script>
   <script defer src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script defer src="/js/index.js" type="text/javascript" charset="utf-8"></script>
   {% seo title=false %}
