Add hiring section

--- a/_includes/important-links.html
+++ b/_includes/important-links.html
@@ -27,6 +27,7 @@
     <li><a class="spec" href="https://www.meetup.com/topics/elixir/">Meetups around the world</a></li>
     <li><a class="spec" href="https://github.com/elixir-lang/elixir/wiki">Wiki with events and resources maintained by
         the community</a></li>
+    <li><a class="spec" href="/hiring.html">Hiring Elixir Developers</a></li>
   </ul>
 </div>
 
